# NandinaUI

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README.md.bak  build.zig  build.zig.zon  nandina.cpp  nandina.h  qmldir  vcpkg.json
Nandina/: .qmlls.ini  CMakeLists.txt  CatppuccinFrappe.cpp  CatppuccinFrappe.hpp  CatppuccinLatte.cpp  CatppuccinLatte.hpp  CatppuccinMacchiato.cpp  CatppuccinMacchiato.hpp  CatppuccinMocha.cpp  CatppuccinMocha.hpp  Nandina.cpp  Nandina.hpp  NandinaFont.hpp  NandinaPlugin.cpp  NandinaPlugin.hpp  Theme.cpp  Theme.hpp  nandinastyle.json  nandinaui.cpp  nandinaui.h  qmldir
Nandina/Button/: AbstractButton.qml  CMakeLists.txt  PrimaryButton.qml
Nandina/Color/: CMakeLists.txt  CatppuccinFrappe.cpp  CatppuccinFrappe.hpp  CatppuccinLatte.cpp  CatppuccinLatte.hpp  CatppuccinMacchiato.cpp  CatppuccinMacchiato.hpp  CatppuccinMocha.cpp  CatppuccinMocha.hpp  CatppuccinTheme.cpp  CatppuccinTheme.hpp  NandinaStyle.cpp  NandinaStyle.hpp  TestRectangle.qml  color_atla.cpp  color_atla.hpp  color_schema.hpp
Nandina/Components/: CMakeLists.txt  NanButton.qml  base_component.cpp  base_component.hpp  component_collection.cpp  component_collection.hpp  component_factory.cpp  component_factory.hpp  component_manager.cpp  component_manager.hpp  component_registrar.cpp  component_registrar.hpp  style_loader.cpp  style_loader.hpp
Nandina/Controls/: Button.qml  CMakeLists.txt  Checkbox.qml  Input.qml  Label.qml  MyRectangle.qml  NanButton.qml  NanCheckbox.qml  NanInput.qml  NanLabel.qml  NanSurface.qml  NanSwitch.qml  Switch.qml  button_style_utils.js  nandina_controls_module.cpp  theme_utils.js
Nandina/Core/: CMakeLists.txt  nan_singleton.hpp  nandina_types.hpp
Nandina/Experimental/: CMakeLists.txt
Nandina/Feedback/: Alert.qml  CMakeLists.txt
Nandina/Fonts/: CMakeLists.txt  font_collection.cpp  font_collection.hpp
Nandina/Icon/: CMakeLists.txt  base_icon.hpp  icon_manager.cpp  icon_manager.hpp  icons.json  nan_icon_item.cpp  nan_icon_item.hpp
Nandina/Layouts/: CMakeLists.txt
Nandina/Nandina/: qmldir
Nandina/Primitives/: BaseControl.qml  FormFieldBehavior.qml  Indicator.qml  Pressable.qml  Surface.qml
Nandina/Res/: resources.qrc
Nandina/Resources/: CMakeLists.txt
Nandina/Theme/: CMakeLists.txt  NanStyleScope.qml  NanThemeScope.qml  baseColors.cpp  baseColors.hpp  nan_style.cpp  nan_style.hpp  nan_theme.hpp  palette.cpp  palette.hpp  themeManager.cpp  themeManager.hpp  theme_export.hpp  theme_manager.cpp  theme_manager.hpp
Nandina/Tokens/: CMakeLists.txt  NanSpacing.qml  NanTypography.qml  nan_radius.hpp  nan_spacing.hpp  nan_typography.hpp
Nandina/Utils/: CMakeLists.txt  CaskaydiaMonoFont.qml  NandinaFont.cpp  NandinaFont.hpp  NandinaType.cpp  NandinaType.hpp
Nandina/Widget/: CMakeLists.txt  NandinaWindow.qml
Nandina/Window/: CMakeLists.txt  CornerRectangle.qml  DefaultTitleBar.qml  NanResizeEdge.qml  NanTitleBar.qml  NanTitleBarButton.qml  NanWindow.qml  NanWindowResizer.qml  NandinaWindow.qml  ResizeHandler.qml  TitleBar.qml  TitleBarButton.qml  WindowResizer.qml
NandinaExample/: .qmlls.ini  CMakeLists.txt  Main.qml  main.cpp  qtquickcontrols2.conf
NandinaUI/: CMakeLists.txt  qmldir
NandinaUI/Button/: NanDefaultButton.qml  qmldir
NandinaUI/Color/: CatppuccinFrappe.hpp  CatppuccinLatte.hpp  CatppuccinMacchiato.hpp  CatppuccinMocha.hpp  CatppuccinMocha.qml  CatppuccinTheme.hpp  NandianPalette.qml  NandinaTheme.qml  NandinaThemeType.qml  NandinanTheme.qml  qmldir
NandinaUI/Controls/: Button.qml  NandinaWindow.qml  ResizeHandle.qml
NandinaUI/Theme/: themeManager.cpp  themeManager.hpp
NandinaUI/Widget/: NandinaWindow.qml
NandinaUI/Window/: NandinaWindow.qml  TitleBarButton.qml
app/: CMakeLists.txt  nan_application.ixx
app/src/: nan_application.cppm  nan_application.ixx  nan_authoring.cppm  nan_computed_var_impl.cpp  nan_page.cppm  nan_page_host.cppm  nan_router.cppm  nan_var.cppm  nan_var_impl.cpp
bindings/: CMakeLists.txt
example/: ButtonDemoPage.qml  CMakeLists.txt  CheckboxDemoPage.qml  ControlsDemoPage.qml  CustomTheme.qml  InputDemoPage.qml  LabelDemoPage.qml  Main.qml  PageRegistration.qml  SwitchDemoPage.qml  WindowDemoPage.qml  main.cpp
example/pages/: BadgePage.qml  ButtonPage.qml  CardPage.qml  ColorPalettePage.qml  LabelPage.qml  PageSpec.qml  SettingPage.qml  SideBarPage.qml  SurfacePressablePanelPage.qml  ThemePage.qml
foundation/: CMakeLists.txt  design-nan_point.md  design-nan_rect.md
foundation/docs/: design-nan_constraints.md  design-nan_insets.md  design-nan_point.md  design-nan_types.md
foundation/src/: log.cpp  log.cppm  nan_color.cppm  nan_color_converter.cppm  nan_color_schema.cppm  nan_constraints.cppm  nan_insets.cppm  nan_point.cppm  nan_rect.cppm  nan_size.cppm  nan_types.cppm
layout/: CMakeLists.txt
layout/src/: flex_widgets.cppm  layout_container.cppm  layout_core.cppm  nan_layout.cppm  positioned.cppm
reactive/: CMakeLists.txt
reactive/src/: computed.cppm  effect.cppm  event_signal.cppm  nan_animation.cppm  nan_reactive.cppm  prop.cppm  state.cppm  state_list.cppm  tracking.cppm
render/: CMakeLists.txt
render/src/: nan_draw_clip.cpp  nan_render.cppm  scene.cppm  thorvg_adapter.cppm  thorvg_backend.cppm
runtime/: CMakeLists.txt
runtime/docs/: runtime-design.md
runtime/src/: nan_event.cppm  nan_widget.cppm  nan_window.cpp  nan_window.cppm
showcase/: CMakeLists.txt  README.md  application.cpp  application.cppm  chart_card.cppm  dock_bar.cppm  footer_section.cppm  gui.zig  gui_pages.zig  header_bar.cppm  main.cpp  main.zig  main_page.cppm  middle_content_section.cppm  nan_showcase.cppm  project_progress_card.cppm  recent_activity_card.cppm  registry.zig  showcase_registry.cppm  sidebar_section.cppm  stack_demo_card.cppm  stats_section.cppm
showcase/cpp/: main.cpp
showcase/demos/: color_space.zig  foundation_color.zig  foundation_geometry.zig  layout_box.zig  reactive_batch.zig  reactive_counter.zig  render_scene.zig  (+7 more)
tests/: CMakeLists.txt
text/: CMakeLists.txt
theme/: CMakeLists.txt
widgets/: CMakeLists.txt
(+485 files in other folders)
